[gd_scene load_steps=4 format=3 uid="uid://dkhqb16aowtkb"]

[ext_resource type="PackedScene" uid="uid://dlsrij6ro5kea" path="res://scenes/ingame/ingame_root.tscn" id="1_pq8q7"]
[ext_resource type="Script" uid="uid://dik356e3utp7m" path="res://root.gd" id="1_pyidc"]
[ext_resource type="PackedScene" uid="uid://dbgmenm6ty21i" path="res://scenes/Menu/main_menu.tscn" id="3_vvh5c"]

[node name="Root" type="Node2D"]
process_mode = 3
script = ExtResource("1_pyidc")

[node name="IngameRoot" parent="." instance=ExtResource("1_pq8q7")]
process_mode = 1

[node name="MainMenu" parent="." instance=ExtResource("3_vvh5c")]
process_mode = 3

[connection signal="gameOver" from="IngameRoot" to="." method="_on_ingame_root_game_over"]
[connection signal="continueGame" from="MainMenu" to="." method="_on_main_menu_continue_game"]
[connection signal="newGame" from="MainMenu" to="." method="_on_main_menu_new_game"]
[connection signal="videoSettingsChanged" from="MainMenu" to="." method="_on_main_menu_video_settings_changed"]
